Fixed footer overlap on mobile by changing footer margin to margin-top 50px.

--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,7 @@ p, .light{
 		
 }
 .footer{
-	margin: 50px;
+	margin-top: 50px;
 }
 .footer p{
 	font-size: 10px;
@@ -75,6 +75,7 @@ p, .light{
 .footer a{
 	margin-right: 10px;
 	margin-left: 10px;
+	font-size: 10px !important;
 }
 .btn-default,.btn-primary,.btn-success,.btn-info,.btn-warning,.btn-danger {
     -webkit-box-shadow: 2px 5px 0px rgba(4, 4, 4, 0.3);
